--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
         <button id="nextButton" onclick="nextQuestion()" style="display: none;">다음 문제</button>
         <button id="endButton" onclick="endQuiz()" style="display: none;">끝내기</button>
       </div>
+      <div id="userHistoryDisplay" style="display: none; margin: 10px 0;">
+        <h3>내 풀이 기록</h3>
+        <div id="userHistoryList"></div>
+      </div>
       <div class="logout-container">
         <button onclick="logoutUser()">로그아웃</button>
       </div>
